2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* compress.c (write_data): Made static.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_PROG_STDC_CC): Use C99 if possible.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* Makefile.am (POD2MAN): Use VERSION variable.

	* Makefile.in: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* install-defs.sh.in: Removed.

	* configure.ac (AC_CONFIG_FILES): Removed install-defs.sh.

	* Makefile.in, configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (ZINCS, ZDEPS): Removed redundant variables.

	* Makefile.am (DEPENDENCIES): Removed. 
	(AM_CPPFLAGS) Removed redundant ZINCS variable.

	* Makefile.in, configure, lib/Makefile.in: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_ARG_ENABLE): Removed redundant option.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_ARG_WITH): Removed redundant option.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_STRUCT_TM): Removed redundant check.

	* configure: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_PATH_PROG): Don't look for cp, strip 
	and chmod.

	* Makefile.in, configure, lib/Makefile.in: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_PATH_PROG): Don't look for rm.

	* Makefile.in, configure, lib/Makefile.in: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Removed Sun CC task.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	PR 18986

	* lib/stdbool_.h, m4/stdbool.m4: New files from
	gnulib to support stdbool.h on platforms without it.

	* Makefile.in, aclocal.m4, config.h.in, configure,
	lib/Makefile.am, lib/Makefile.in, m4/gnulib-cache.m4,
	m4/gnulib-comp.m4: Regenerated.

2007-02-07  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Removed gnulib items.
